name:                cplex-hs
version:             0.5.0.3
synopsis:            high-level CPLEX interface
-- description:
License:             BSD3
License-file:        LICENSE
Copyright:           (c) Greg Horn 2012-2013, Stefan Jacholke 2016
Author:              Greg Horn, Stefan Jacholke
Maintainer:          Stefan Jacholke <stefanj@encrunch.com>
Homepage:            https://github.com/stefan-j/cplex-haskell
Bug-Reports:         https://github.com/stefan-j/cplex-haskell/issues
Category:            Math
Stability:           Experimental
Description:
    High level interface to CPLEX

    To install on OSX with cplex in the standard install location, specify the extra-lib-dirs as: @cabal install cplex-hs --extra-lib-dirs=$HOME/Applications/IBM/ILOG/CPLEX_Studio1271/cplex/lib/x86-64_osx/static_pic/@


build-type:          Simple
cabal-version:       >=1.24
Library
  default-language:    Haskell2010
  exposed-modules:   CPLEX.Core,
                     CPLEX.Param,
                     CPLEX.Bindings,
                     Data.LP,
                     Data.Internal,
                     Data.LP.Backend.Cplex
  -- other-modules:
  Build-depends:     base < 5.0
                   , unordered-containers 
                   , hashable
                   , containers < 6.0
                   , mtl < 2.3
                   , primitive < 0.7.0.0
                   , transformers < 0.5.3.0
                   , vector < 0.13.0.0
  hs-source-dirs:    src

  if os(linux)
      Extra-lib-dirs:  /opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/x86-64_linux/static_pic/
      Extra-libraries: cplex, m, pthread
      Include-dirs:    /opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/include/
      cc-options: -Wall -Wextra
  if os(OSX)
      Extra-libraries: cplex, m, pthread
