Name:          cplex-bindings
Version:       0.2
license:       BSD3
license-file:  LICENSE
Copyright:     (c) Greg Horn 2012-2013
Author:        Greg Horn
Maintainer:    stefanjacholke@gmail.com@gmail.com
Stability:     Experimental
--Category:      Math
Build-type:    Simple
Cabal-version: >=1.8
synopsis:      low-level CPLEX bindings
--description:   TODO

Extra-source-files: cbits

Library
  Exposed-modules:  CPLEX.Bindings

  Build-depends: base >= 4 && < 5
  hs-source-dirs: src
  
--  Extra-lib-dirs:  /opt/ibm/ILOG/CPLEX_Studio124/cplex/bin/x86-64_sles10_4.1/

  if os(linux)
    Extra-lib-dirs:  /opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/lib/x86-64_linux/static_pic/
    Extra-libraries: cplex, m, pthread
    Include-dirs:    /opt/ibm/ILOG/CPLEX_Studio_Community1263/cplex/include/
--  Ghc-options: -pgml g++
    cc-options: -Wall -Wextra

--  C-sources:         cbits/my_cplex.c
--  Install-includes:  cbits/my_cplex.h
