name:                cplex
version:             0.2.0.0
synopsis:            high-level CPLEX interface
-- description:
license:             BSD3
license-file:        LICENSE
Copyright:           (c) Greg Horn 2012-2013
Author:              Greg Horn
Maintainer:          stefanjacholke@gmail.com@gmail.com
Stability:           Experimental
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   CPLEX,
                     CPLEX.Param
  -- other-modules:
  Build-depends:     base >= 4 && < 5
                   , containers
                   , cplex-bindings >= 0.2
                   , mtl
                   , transformers >= 0.4.2.0
                   , vector
  hs-source-dirs:    src
